# astra-code

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
.claude/: settings.local.json
agent/: graph.py  memory.py  parser.py  planner.py  prompts.py  reflector.py  state.py  summarizer.py
cli/: config_ui.py  interface.py  startup.py
config/: manager.py  providers.py  settings.py
tools/: file_tools.py  search_tools.py  shell_tools.py
training/: logger.py
