[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "astra-code"
version = "0.3.0"
description = "A Claude Code-style coding agent for your terminal — runs on local LLMs via Ollama or cloud APIs"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Sheikh Abdul Munim", email = "sheikh00munim@gmail.com" }
]
keywords = ["ai", "agent", "coding", "ollama", "llm", "cli", "terminal"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
    "Topic :: Utilities",
]
dependencies = [
    "langchain>=0.3.0",
    "langchain-ollama>=0.2.0",
    "langchain-community>=0.3.0",
    "langgraph>=0.2.0",
    "rich>=13.0.0",
    "click>=8.1.0",
]

[project.optional-dependencies]
anthropic = ["langchain-anthropic>=0.3.0"]
openai    = ["langchain-openai>=0.3.0"]
groq      = ["langchain-groq>=0.2.0"]
all       = ["langchain-anthropic>=0.3.0", "langchain-openai>=0.3.0", "langchain-groq>=0.2.0"]

[project.urls]
Homepage   = "https://github.com/sheikhmunim/astra-code"
Repository = "https://github.com/sheikhmunim/astra-code"
Issues     = "https://github.com/sheikhmunim/astra-code/issues"

[project.scripts]
astra = "main:cli"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools]
py-modules = ["main"]
